[gd_scene load_steps=8 format=3 uid="uid://c4mk6qq8peelk"]

[ext_resource type="Script" path="res://script/editor/script_editor.gd" id="1_286av"]
[ext_resource type="PackedScene" uid="uid://ct82xsgnyqqmb" path="res://script/visual/editor/visual_script_editor.tscn" id="2_6iqlm"]
[ext_resource type="PackedScene" uid="uid://bojc18otlfqd1" path="res://script/gd/editor/gdscript_editor.tscn" id="3_2io6g"]
[ext_resource type="Theme" uid="uid://chpmeyn2g6o6r" path="res://script/visual/editor/script_editor.theme.tres" id="3_n73g1"]
[ext_resource type="Script" path="res://script/editor/entry_creation/entry_create_dialog.gd" id="4_sbr1u"]
[ext_resource type="PackedScene" uid="uid://bbdxbffixyrdn" path="res://script/editor/entry_creation/entry_creation_menu.tscn" id="5_we3i8"]
[ext_resource type="Script" path="res://script/editor/entry_creation/signal_tree_populator.gd" id="7_w8ott"]

[node name="ScriptEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_286av")

[node name="VisualScriptEditor" parent="." instance=ExtResource("2_6iqlm")]
layout_mode = 1

[node name="GDScriptEditor" parent="." instance=ExtResource("3_2io6g")]
layout_mode = 1

[node name="ScriptEntryCreationDialog" type="ConfirmationDialog" parent="."]
title = "Create Script Entry"
size = Vector2i(366, 346)
theme = ExtResource("3_n73g1")
ok_button_text = "Create"
script = ExtResource("4_sbr1u")

[node name="ScriptEntryCreationMenu" parent="ScriptEntryCreationDialog" instance=ExtResource("5_we3i8")]
offset_left = 8.0
offset_top = 8.0
offset_right = 358.0
offset_bottom = 308.0

[node name="ScriptEntrySignalTreePopulator" type="Node" parent="ScriptEntryCreationDialog"]
script = ExtResource("7_w8ott")

[connection signal="request_save_script_as_asset" from="VisualScriptEditor" to="." method="_on_request_save_script_as_asset"]
[connection signal="request_script_editor_visibility" from="VisualScriptEditor" to="." method="set_visual_script_editor_visibility"]
[connection signal="request_show_entry_creation_dialog" from="VisualScriptEditor" to="." method="_on_request_show_entry_creation_dialog"]
[connection signal="request_toggle_variable_editor" from="VisualScriptEditor" to="." method="_on_request_toggle_variable_editor"]
[connection signal="request_track_recently_used_space_script" from="VisualScriptEditor" to="." method="_on_request_track_recently_used_space_script"]
[connection signal="request_save_script_as_asset" from="GDScriptEditor" to="." method="_on_request_save_script_as_asset"]
[connection signal="request_script_editor_visibility" from="GDScriptEditor" to="." method="set_gd_script_editor_visibility"]
[connection signal="request_show_entry_creation_dialog" from="GDScriptEditor" to="." method="_on_request_show_entry_creation_dialog"]
[connection signal="request_toggle_variable_editor" from="GDScriptEditor" to="." method="_on_request_toggle_variable_editor"]
[connection signal="request_track_recently_used_space_script" from="GDScriptEditor" to="." method="_on_request_track_recently_used_space_script"]
[connection signal="confirmed" from="ScriptEntryCreationDialog" to="ScriptEntryCreationDialog" method="_on_confirmed"]
[connection signal="create_entry_block" from="ScriptEntryCreationDialog" to="." method="_on_script_entry_creation_dialog_create_entry_block"]
[connection signal="focus_entered" from="ScriptEntryCreationDialog" to="." method="_on_dialog_focus_entered"]
[connection signal="focus_exited" from="ScriptEntryCreationDialog" to="." method="_on_dialog_focus_exited"]
[connection signal="script_entry_creation_confirmed" from="ScriptEntryCreationDialog/ScriptEntryCreationMenu" to="ScriptEntryCreationDialog" method="_on_script_entry_creation_menu_confirmed"]
